Match-id-3a99e6b4aaab60aa8576750aca89d82963e45831

--- a/mindx-dl/collect_log/collect_log.yaml
+++ b/mindx-dl/collect_log/collect_log.yaml
@@ -36,7 +36,7 @@
       shell:
         chdir: "{{ playbook_dir }}"
         cmd:
-          mv MindX_Report*.gz { hostvars['master_reports']['report_dir'] }}
+          mv MindX_Report*.gz "{{ hostvars['master_reports']['report_dir'] }}/"
       when:
         - ansible_hostname in groups["master"]
 
