Match-id-eb9869c739c8781e90a65696b4f80ec28d3b9cf2

--- a/mindx-dl/collect_log/collect_log.yaml
+++ b/mindx-dl/collect_log/collect_log.yaml
@@ -80,7 +80,7 @@
     - name: find report file from workers
       find:
         paths: "{{ tmp_dir }}/MindXReport/"
-        patterns: "MindX-DL_Report*.zip"
+        patterns: "MindX_Report*.gz"
         recurse: True
       register: file_name
       when:
