Match-id-929bc84cd1149a0634eb11be3207e55323bdd9ae

--- a/mindx-dl/deploy/offline/steps/offline_install_packages.yaml
+++ b/mindx-dl/deploy/offline/steps/offline_install_packages.yaml
@@ -11,7 +11,7 @@
     ############################# Install NFS Server ##################################
     - name: Install nfs-server
       shell:
-        chdir: "{{dls_root_dir}}/base_software/nfs"
+        chdir: "{{dls_root_dir}}/base_software/"
         cmd:
           dpkg -i libtirpc* libtirpc-dev*;
           dpkg -i rpcbind*;
