Match-id-37316f9ff45c43e885d0fb81f57a20596048f173

--- a/mindx-dl/collect_log/collect_log.yaml
+++ b/mindx-dl/collect_log/collect_log.yaml
@@ -123,8 +123,7 @@
       shell:
         chdir: "{{ playbook_dir }}"
         cmd:
-          mv MindX_Report*.gz "{{ hostvars['master_reports']['report_dir'] }}/";
-          chmod -R 400 "{{ hostvars['master_reports']['report_dir'] }}/MindX_Report*.gz";
+          chmod -R 400 "{{ hostvars['master_reports']['report_dir'] }}";
           chown -R root:root "{{ hostvars['master_reports']['report_dir'] }}"
       ignore_errors: True
       when:
