Match-id-593451931c1ce6d123727fa05ef247091fa28f41

--- a/mindx-dl/collect_log/collect_log.yaml
+++ b/mindx-dl/collect_log/collect_log.yaml
@@ -36,7 +36,7 @@
       shell:
         chdir: "{{ playbook_dir }}"
         cmd:
-          mv MindX_Report*.gz "{{ hostvars['master_reports']['report_dir'] }}/"
+          mv MindX_Report*.gz {{ hostvars['master_reports']['report_dir'] }}/
       when:
         - ansible_hostname in groups["master"]
 
@@ -123,8 +123,9 @@
       shell:
         chdir: "{{ playbook_dir }}"
         cmd:
-          chmod -R 400 "{{ hostvars['master_reports']['report_dir'] }}";
-          chown -R root:root "{{ hostvars['master_reports']['report_dir'] }}"
+          mv MindX_Report*.gz {{ hostvars['master_reports']['report_dir'] }}/ || true;
+          chmod -R 400 {{ hostvars['master_reports']['report_dir'] }}/MindX_Report*.gz || true;
+          chown -R root:root {{ hostvars['master_reports']['report_dir'] }}
       ignore_errors: True
       when:
         - ansible_hostname in groups["master"]
