--- a/mindx-dl/upgrade/upgrade.yaml
+++ b/mindx-dl/upgrade/upgrade.yaml
@@ -75,18 +75,16 @@
     # Handle version differences of components.
     - name: Handling cadvisor version differences
       shell:
-        chdir: "{{ playbook_dir }}/Previous_version_info"
         cmd:
-          kubectl delete -f cadvisor-export.yaml;
-      tags: upgrade    
+          kubectl delete daemonset cadvisor -n cadvisor;
+      tags: upgrade
 
     - name: Handling volcano version differences
       shell:
-        chdir: "{{ playbook_dir }}/Previous_version_info"
         cmd:
           kubectl delete secret volcano-admission-secret -n volcano-system;
-          kubectl delete -f volcano-admission-export.yaml;
-          kubectl delete -f volcano-admission-init-export.yaml
+          kubectl delete deployment volcano-admission -n volcano-system;
+          kubectl delete job volcano-admission-init -n volcano-system
       tags: upgrade
       ignore_errors: True
 
@@ -114,7 +112,7 @@
           kubectl get pods --all-namespaces -o wide | grep hccl-controller |grep Running | wc -l
       register: return_value
       until: "return_value.stdout == '1'"
-      retries: 4
+      retries: 6
       delay: 10
       tags: check
 
@@ -124,7 +122,7 @@
           kubectl get pods --all-namespaces | grep volcano |grep Running | wc -l
       register: return_value
       until: "return_value.stdout == '3'"
-      retries: 4
+      retries: 6
       delay: 10
       tags: check
 
@@ -139,7 +137,7 @@
           kubectl get pods --all-namespaces -o wide | grep cadvisor |grep Running | wc -l
       register: return_value
       until: "return_value.stdout == '1'"
-      retries: 4
+      retries: 6
       delay: 10
       tags: check
 
@@ -149,7 +147,7 @@
           kubectl get pods --all-namespaces | grep ascend-device-plugin |grep Running | wc -l
       register: return_value
       until: "return_value.stdout == '1'"
-      retries: 4
+      retries: 6
       delay: 10
       tags: check
 
@@ -166,7 +164,7 @@
           kubectl get pods --all-namespaces -o wide | grep cadvisor |grep Running | wc -l
       register: return_value
       until: "return_value.stdout == HOST_COUNT"
-      retries: 4
+      retries: 6
       delay: 10
       tags: check
 
@@ -176,7 +174,7 @@
           kubectl get pods --all-namespaces | grep ascend-device-plugin |grep Running | wc -l
       register: return_value
       until: "return_value.stdout == HOST_COUNT"
-      retries: 4
+      retries: 6
       delay: 10
       tags: check
 
@@ -218,4 +216,3 @@
           docker rmi {{ dp }}
       ignore_errors: True
       tags: remove-images
- 
