--- a/mindx-dl/deploy/offline/steps/set_global_env.yaml
+++ b/mindx-dl/deploy/offline/steps/set_global_env.yaml
@@ -84,14 +84,14 @@
   tasks:
     - name: unarchive offline package - arm64
       unarchive:
-        src: "{{dls_root_dir}}/offline-pkg-arm64.zip"
-        dest: "{{dls_root_dir}}/base_software/"
+        src: "{{ dls_root_dir }}/offline-pkg-arm64.zip"
+        dest: "{{ dls_root_dir }}/base_software/"
       when: ansible_architecture == "aarch64"
 
     - name: unarchive offline package - x86_64
       unarchive:
-        src: "{{dls_root_dir}}/offline-pkg-amd64.zip"
-        dest: "{{dls_root_dir}}/base_software/"
+        src: "{{ dls_root_dir }}/offline-pkg-amd64.zip"
+        dest: "{{ dls_root_dir }}/base_software/"
       when: ansible_architecture == "x86_64"
 
 # Change settings.
@@ -108,13 +108,13 @@
 
     - name: Install selinux with pip - CentOS
       shell:
-        chdir: "{{dls_root_dir}}/base_software/selinux"
+        chdir: "{{ dls_root_dir }}/base_software/selinux"
         cmd:
           pip3.7 install distro-1.5.0* selinux-0.2.1*
       when:
         - ansible_distribution == 'CentOS'
 
-    - name: Close firwall - CentOS
+    - name: Close firewall - CentOS
       shell:
         cmd:
           systemctl stop firewalld.service;
@@ -191,7 +191,7 @@
         - basic_only
         - init-master
 
-    # create no_proxy when no_proxy exists
+    # create no_proxy when no_proxy not exists
     - name: Add no proxy ip
       lineinfile:
         path: /etc/profile
@@ -224,10 +224,10 @@
   remote_user: root
 
   tasks:
-  - name: Add User
-    shell:
-      cmd:
-        useradd -d /home/hwMindX -u 9000 -m -s /bin/bash hwMindX || true;
-        useradd -d /home/HwHiAiUser -u 1000 -m -s /bin/bash HwHiAiUser || true;
-        usermod -a -G HwHiAiUser hwMindX
-    tags: basic_only
+    - name: Add User
+      shell:
+        cmd:
+          useradd -d /home/hwMindX -u 9000 -m -s /bin/bash hwMindX || true;
+          useradd -d /home/HwHiAiUser -u 1000 -m -s /bin/bash HwHiAiUser || true;
+          usermod -a -G HwHiAiUser hwMindX
+      tags: basic_only
