--- a/mindx-dl/deploy/online/steps/clean_services.yaml
+++ b/mindx-dl/deploy/online/steps/clean_services.yaml
@@ -8,47 +8,47 @@
     deploy_yaml_dir: "{{ dls_root_dir }}/yamls"
 
   tasks:
-  - name: remove volcano
-    shell:
-      chdir: "{{ deploy_yaml_dir }}"
-      cmd:
-        kubectl delete -f volcano-*.yaml
-    tags: volcano
-    ignore_errors: yes
+    - name: remove volcano
+      shell:
+        chdir: "{{ deploy_yaml_dir }}"
+        cmd:
+          kubectl delete -f volcano-*.yaml
+      tags: volcano
+      ignore_errors: True
 
-  - name: remove cadvisor
-    shell:
-      chdir: "{{ deploy_yaml_dir }}"
-      cmd:
-        kubectl delete -f cadvisor-*.yaml
-    tags: cadvisor
-    ignore_errors: yes
+    - name: remove cadvisor
+      shell:
+        chdir: "{{ deploy_yaml_dir }}"
+        cmd:
+          kubectl delete -f cadvisor-*.yaml
+      tags: cadvisor
+      ignore_errors: True
 
-  - name: remove hccl-controller
-    shell:
-      chdir: "{{ deploy_yaml_dir }}"
-      cmd:
-        kubectl delete -f hccl-controller*.yaml
-    tags: hccl-controller
-    ignore_errors: yes
+    - name: remove hccl-controller
+      shell:
+        chdir: "{{ deploy_yaml_dir }}"
+        cmd:
+          kubectl delete -f hccl-controller*.yaml
+      tags: hccl-controller
+      ignore_errors: True
 
-  - name: remove device-plugin
-    shell:
-      chdir: "{{ deploy_yaml_dir }}"
-      cmd:
-        kubectl delete -f ascendplugin-310*.yaml;
-        kubectl delete -f ascendplugin-volcano*.yaml
-    tags: device-plugin
-    ignore_errors: yes
+    - name: remove device-plugin
+      shell:
+        chdir: "{{ deploy_yaml_dir }}"
+        cmd:
+          kubectl delete -f ascendplugin-310*.yaml;
+          kubectl delete -f ascendplugin-volcano*.yaml
+      tags: device-plugin
+      ignore_errors: True
 
-  - name: Check whether all service component services are terminated
-    shell:
-      cmd:
-        kubectl get pods --all-namespaces -o wide
-        | grep Terminating >/dev/null 2>&1;
-        echo $?
-    register: return_value
-    until: "'1' in return_value.stdout"
-    retries: 6
-    delay: 5
-    ignore_errors: yes
+    - name: Check whether all service component services are terminated
+      shell:
+        cmd:
+          kubectl get pods --all-namespaces -o wide
+          | grep Terminating >/dev/null 2>&1;
+          echo $?
+      register: return_value
+      until: "'1' in return_value.stdout"
+      retries: 6
+      delay: 5
+      ignore_errors: True
