--- a/mindx-dl/deploy/online/steps/set_global_env.yaml
+++ b/mindx-dl/deploy/online/steps/set_global_env.yaml
@@ -37,7 +37,7 @@
       when:
         - ansible_distribution == 'CentOS'
 
-    - name: Close firwall - CentOS
+    - name: Close firewall - CentOS
       shell:
         cmd:
           systemctl stop firewalld.service;
@@ -113,7 +113,7 @@
         - basic_only
         - init-master
 
-    # create no_proxy when no_proxy exists
+    # create no_proxy when no_proxy not exists
     - name: Add no proxy ip
       lineinfile:
         path: /etc/profile
@@ -145,10 +145,10 @@
   remote_user: root
 
   tasks:
-  - name: Add User
-    shell:
-      cmd:
-        useradd -d /home/hwMindX -u 9000 -m -s /bin/bash hwMindX || true;
-        useradd -d /home/HwHiAiUser -u 1000 -m -s /bin/bash HwHiAiUser || true;
-        usermod -a -G HwHiAiUser hwMindX
-    tags: basic_only
+    - name: Add User
+      shell:
+        cmd:
+          useradd -d /home/hwMindX -u 9000 -m -s /bin/bash hwMindX || true;
+          useradd -d /home/HwHiAiUser -u 1000 -m -s /bin/bash HwHiAiUser || true;
+          usermod -a -G HwHiAiUser hwMindX
+      tags: basic_only
