Match-id-98123fd20a7a195d41eee65f4c2dac25a84375ee

--- a/mindx-dl/upgrade/upgrade.yaml
+++ b/mindx-dl/upgrade/upgrade.yaml
@@ -178,7 +178,7 @@
       delay: 10
       tags: check
 
-# The folloing plays are used to remove previous version images after upgrade.
+# The following plays are used to remove previous version images after upgrade.
 - hosts: localnode, master
   remote_user: root
 
