--- a/mindx-dl/deploy/offline/steps/init_kubernetes.yaml
+++ b/mindx-dl/deploy/offline/steps/init_kubernetes.yaml
@@ -93,7 +93,7 @@
   remote_user: root
 
   tasks:
-    - name: Register join commamd
+    - name: Register join command
       shell:
         cmd:
           kubeadm token create --print-join-command
