--- a/mindx-dl/deploy/online/steps/set_global_env.yaml
+++ b/mindx-dl/deploy/online/steps/set_global_env.yaml
@@ -10,7 +10,7 @@
       fail:
         msg: "Master IP is conflict with kubernetes cluster ip. To change the Kubernetes cluster IP address, perform the following steps: \
                Step 1, edit {{ playbook_dir }}/init_kubernetes.yaml, find the line '--pod-network-cidr=192.168.0.0/16', and change '192.168.0.0/16' to another; \
-               Step 2, edit {{ dls_root_dir }}/yamls/calico.yaml, find the line 'value: '192.168.0.0/16', and change '192.168.0.0/16' to another. \
+               Step 2, edit {{ dls_root_dir }}/yamls/calico.yaml, find the line value: '192.168.0.0/16', and change '192.168.0.0/16' to another. \
                At last, ensure that the IP addresses in Step 1 and Step 2 are the same."
       when:
         - ansible_default_ipv4['address'].startswith("192.168")
