Match-id-1d9cc12a0cefabb9d631781c631c8abf833b8b25

--- a/mindx-dl/upgrade/upgrade.yaml
+++ b/mindx-dl/upgrade/upgrade.yaml
@@ -99,6 +99,7 @@
           kubectl apply -f ascendplugin-volcano*.yaml;
           kubectl apply -f ascendplugin-310*.yaml;
       tags: upgrade
+      ignore_errors: True
 
 # This play is used to check service status after upgrade.
 - hosts: localnode, master
