--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,7 @@
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+/.idea/vcs.xml
+/.idea/workspace.xml
+/.idea/modules.xml
+/.idea/ascend-hccl-controller.iml
