Match-id-ca3c78a662c7fb17696e4409ae591edb05e03a29

--- a/mindx-dl/python_examples/vcjob.yaml
+++ b/mindx-dl/python_examples/vcjob.yaml
@@ -32,6 +32,14 @@ spec:
           env:
           - name: RANK_TABLE_FILE
             value: "/user/serverid/devindex/config/hccl.json"  # ConfigMap中data挂载路径，如需修改要和下面ConfigMap的挂载路径一致
+          - name: {{ job_name }}                               # 和Jobname保持一致
+            valueFrom:
+              fieldRef:
+                fieldPath: metadata.name
+          - name: XDL_IP                                       # 物理节点的IP,用来标识Pod运行在哪个节点上
+            valueFrom:
+              fieldRef:
+                fieldPath: status.hostIP
           command: {{ command }}
           args: {{ args }}
           resources:
@@ -83,13 +91,4 @@ spec:
         - name: localtime
           hostPath:
             path: /etc/localtime               # 配置docker的时间
-        env:
-        - name: {{ job_name }}     # 和Jobname保持一致
-          valueFrom:
-            fieldRef:
-              fieldPath: metadata.name
-        - name: XDL_IP
-          valueFrom:
-            fieldRef:
-              fieldPath: status.hostIP
         restartPolicy: OnFailure
