--- a/mindx-dl/python_examples/vcjob_deployment.yaml
+++ b/mindx-dl/python_examples/vcjob_deployment.yaml
@@ -25,11 +25,11 @@ spec:
         env:
         - name: RANK_TABLE_FILE
           value: "/user/serverid/devindex/config/hccl.json"  # ConfigMap中data挂载路径，如需修改要和下面ConfigMap的挂载路径一致
-        - name: deploy-with-volcano                          #和Deployment name保持一致
+        - name: {{ job_name }}                               #和Deployment name保持一致
           valueFrom:
             fieldRef:
               fieldPath: metadata.name
-        - name: XDL_IP
+        - name: XDL_IP                                       # 物理节点的IP,用来标识Pod运行在哪个节点上
           valueFrom:
             fieldRef:
               fieldPath: status.hostIP
@@ -39,7 +39,7 @@ spec:
           requests:
             huawei.com/Ascend910: {{ npu_count }}
           limits:
-            huawei.com/Ascend910: {{ npu_count }}            # 目前需要和上面requests保持一致
+            huawei.com/Ascend910: {{ npu_count }}           # 目前需要和上面requests保持一致
         volumeMounts:
           - name: ascend-910-config
             mountPath: /user/serverid/devindex/config
